...
- (void)viewDidLoad {
    [super viewDidLoad];
    
    self.view.backgroundColor = [UIColor whiteColor];
    
    self.label = [[UILabel alloc] initWithFrame:(CGRectMake(self.view.center.x, self.view.center.y, 50.0, 10.0))];
    self.label.text = @"Hello World";
    self.label.backgroundColor = [UIColor lightGrayColor];
    self.label.numberOfLines = 0; // 0 = take up as many lines as you have text for
    self.label.lineBreakMode = NSLineBreakByWordWrapping;
    
    // self.label.numberOfLines = 1;
    // self.label.lineBreakMode = NSLineBreakByTruncatingTail;
...
    CGRect frame = btn1.frame;
    frame.size.width = frame.size.width + 20.0;
    frame.size.height += 20.0;
    btn1.frame = frame;
    
    UIButton *btnSwift = [UIButton buttonWithType:UIButtonTypeRoundedRect];
    [btnSwift setTitle:@"Start Swift" forState:(UIControlStateNormal)];
    [btnSwift addTarget:self action:@selector(btnSwiftTouched:) forControlEvents:UIControlEventTouchUpInside];
    [btnSwift sizeToFit];
    btnSwift.center = CGPointMake(CGRectGetMaxX(btn1.frame), btn1.center.y + 50.0);
    btnSwift.layer.borderWidth = 2.0;
    btnSwift.layer.borderColor = [UIColor grayColor].CGColor;
    [self.view addSubview:btnSwift];
...
