...
        scrollView.addSubview(self.label1)
        
        
        let button1 = UIButton()
        button1.frame = CGRectMake(self.view.center.x, self.view.center.y, 5.0, 5.0)
        button1.backgroundColor = .redColor()
        button1.setTitle("Dismiss", forState: UIControlState.Normal)
        button1.sizeToFit()
        button1.addTarget(self, action: "buttonTouched:", forControlEvents: .TouchUpInside)
        scrollView.addSubview(button1)
        
        let buttonObjC = UIButton()
        buttonObjC.frame = CGRectMake(self.view.center.x + 75.0 , self.view.center.y, 5.0, 5.0)
...
        let buttonUpdate = UIButton()
        buttonUpdate.frame = CGRectMake(self.view.center.x + textField.frame.width / 2, self.view.frame.height - 50.0, 100.0, 5.0)
        buttonUpdate.backgroundColor = .grayColor()
        buttonUpdate.layer.borderColor = UIColor.blackColor().CGColor
        buttonUpdate.layer.cornerRadius = 3
        buttonUpdate.layer.borderWidth = 1
        buttonUpdate.setTitle("GO", forState: .Normal)
        buttonUpdate.sizeToFit()
        buttonUpdate.addTarget(self, action: "updateLabel:", forControlEvents: .TouchUpInside)
        scrollView.addSubview(buttonUpdate)
        
        
    }
...
